[Fix]([0]Login, [1]CreateBoardForm, [2]Signup): [0, 2] removed scrollbars, [1] top and bottom padding in them same and the search icon it centered vertically

--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -8,7 +8,7 @@
 @media screen and (orientation: landscape) {
   .login {
     height: calc(80vh - 1rem);
-    overflow: scroll;
+    overflow: hidden;
   }
 }
 
