--- a/client/src/components/Navbar/CreateBoardForm/BackgroundOptions/BackgroundOptions.scss
+++ b/client/src/components/Navbar/CreateBoardForm/BackgroundOptions/BackgroundOptions.scss
@@ -50,7 +50,7 @@
         // search icon container
         .photos-search-icon {
           position: absolute;
-          top: 5px;
+          top: 8px;
           left: 12px;
 
           // search icon
@@ -64,7 +64,7 @@
           width: 100%;
           padding-left: 2rem;
           box-shadow: inset 0 0 0 2px #dfe3e6;
-          padding: 0.5rem 0 0.3rem 2rem;
+          padding: 0.5rem 0 0.5rem 2rem;
         }
       }
     }
